--- a/index_1.4.html
+++ b/index_1.4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CPS Services</title>
-    <link rel="stylesheet" href="../1.3/styles.css"/>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
     <aside class="main-nav">
@@ -54,7 +54,7 @@
             </li>
         </ul>
         <footer class="main-nav__footer">
-            <div class="feedback">
+            <div class="feedback main-nav__feedback">
                 <ul class="feedback__list">
                     <li class="feedback__item">
                         <button class="feedback__call-button button">
