--- a/1.5.html
+++ b/1.5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CPS Services</title>
-    <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="swiper-bundle.min.css"/>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
@@ -211,7 +211,7 @@
             <button class="button--view-more brands__button-view--more button" id="toggle-button">Показать все</button>
         </section>
     </div>
-    <script src="node_modules/swiper/swiper-bundle.min.js"></script>
+    <script src="swiper-bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
