--- a/1.5.html
+++ b/1.5.html
@@ -1,217 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CPS Services</title>
-    <link rel="stylesheet" href="swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="swiper-bundle.min.css" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="page">
-        <section class="brands page__brands">
-            <h2 class="brands__title h2">Ремонт техники различных брендов</h2>
-            <div class="brands-swiper">
-                <ul class="brands__list list-reset swiper-wrapper">  
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="108"
-                            height="32" 
-                            src="images/1.5/Lenovo_logo.svg" 
-                            alt="Lenovo logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"   
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="116"
-                            height="38" 
-                            src="images/1.5/Samsung_logo.svg" 
-                            alt="Samsung logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="44"
-                            height="44" 
-                            src="images/1.5/Apple_logo.svg" 
-                            alt="Apple logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="128"
-                            height="21" 
-                            src="images/1.5/ViewSonic_logo.svg" 
-                            alt="Viewsonic logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="128"
-                            height="29" 
-                            src="images/1.5/Bosch_logo.svg" 
-                            alt="Bosch logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"   
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="52"
-                            height="52" 
-                            src="images/1.5/HP_logo.svg" 
-                            alt="HP logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="94"
-                            height="24" 
-                            src="images/1.5/Acer_logo.svg" 
-                            alt="Acer logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="128"
-                            height="26" 
-                            src="images/1.5/Sony_logo.svg" 
-                            alt="Sony logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="128"
-                            height="29" 
-                            src="images/1.5/Bosch_logo.svg" 
-                            alt="Bosch logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"   
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="52"
-                            height="52" 
-                            src="images/1.5/HP_logo.svg" 
-                            alt="HP logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="94"
-                            height="24" 
-                            src="images/1.5/Acer_logo.svg" 
-                            alt="Acer logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                    <li class="brands__item swiper-slide">
-                        <a class="brands__link link">
-                            <img
-                            width="128"
-                            height="26" 
-                            src="images/1.5/Sony_logo.svg" 
-                            alt="Sony logotype" 
-                            class="brands__logo">
-                            <img 
-                            width="40"
-                            height="40"
-                            src="images/icons/go.svg" 
-                            alt="" 
-                            class="button__image">
-                        </a>
-                    </li>
-                </ul>
-                <div class="swiper-pagination"></div>
-            </div>
-            <button class="button--view-more brands__button-view--more button" id="toggle-button">Показать все</button>
-        </section>
+      <section class="brands hero__brands">
+        <h3 class="brands__title h3">Ремонт техники различных брендов</h3>
+        <div class="brands__swiper swiper">
+          <ul class="brands__list list-reset swiper-wrapper">
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="108"
+                  height="32"
+                  src="images/1.5/Lenovo_logo.svg"
+                  alt="Lenovo logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="116"
+                  height="38"
+                  src="images/1.5/Samsung_logo.svg"
+                  alt="Samsung logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="44"
+                  height="44"
+                  src="images/1.5/Apple_logo.svg"
+                  alt="Apple logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="128"
+                  height="21"
+                  src="images/1.5/ViewSonic_logo.svg"
+                  alt="Viewsonic logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="128"
+                  height="29"
+                  src="images/1.5/Bosch_logo.svg"
+                  alt="Bosch logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="52"
+                  height="52"
+                  src="images/1.5/HP_logo.svg"
+                  alt="HP logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="94"
+                  height="24"
+                  src="images/1.5/Acer_logo.svg"
+                  alt="Acer logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="128"
+                  height="26"
+                  src="images/1.5/Sony_logo.svg"
+                  alt="Sony logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="128"
+                  height="29"
+                  src="images/1.5/Bosch_logo.svg"
+                  alt="Bosch logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="52"
+                  height="52"
+                  src="images/1.5/HP_logo.svg"
+                  alt="HP logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="94"
+                  height="24"
+                  src="images/1.5/Acer_logo.svg"
+                  alt="Acer logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+            <li class="brands__item swiper-slide">
+              <a class="brands__link link">
+                <img
+                  width="128"
+                  height="26"
+                  src="images/1.5/Sony_logo.svg"
+                  alt="Sony logotype"
+                  class="brands__logo"
+                />
+                <img
+                  width="40"
+                  height="40"
+                  src="images/icons/go.svg"
+                  alt=""
+                  class="button__image"
+                />
+              </a>
+            </li>
+          </ul>
+          <div class="swiper-pagination"></div>
+        </div>
+        <button
+          class="button--view-more brands__button-view--more button"
+          id="toggle-button"
+        >
+          <span class="button__text">Показать все</span>
+        </button>
+      </section>
     </div>
     <script src="swiper-bundle.min.js"></script>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
